[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "cell2module"
version = "0.0.1"
description = "cell2module: gene module discovery from scRNA and scATAC using count-based Bayesian NMF"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Vitalii Kleshchevnikov"},
]
maintainers = [
    {name = "Vitalii Kleshchevnikov", email = "vitalii.kleshchevnikov@sanger.ac.uk"},
]
urls.Documentation = "https://cell2module.readthedocs.io/"
urls.Source = "https://github.com/vitkl/cell2module"
urls.Home-page = "https://github.com/vitkl/cell2module"
dependencies = [
    "anndata",
    # for debug logging (referenced from the issue template)
    "session-info",
    "cell2location>=0.1.3"
]

[project.optional-dependencies]
dev = [
    # CLI for bumping the version number
    "bump2version",
    "pre-commit",
    "twine>=4.0.2"
]
doc = [
    "sphinx>=4",
    "sphinx-book-theme>=0.3.3",
    "myst-nb",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-autodoc-typehints",
    # For notebooks
    "ipykernel",
    "ipython",
    "sphinx-copybutton",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.coverage.run]
source = ["cell2module"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.jupytext]
formats = "ipynb,md"

[tool.cruft]
skip = [
    "tests",
    "src/**/__init__.py",
    "src/**/basic.py",
    "docs/api.md",
    "docs/changelog.md",
    "docs/references.bib",
    "docs/references.md",
    "docs/notebooks/example.ipynb"
]
